--- a/LearnPiano/LearnPiano/src/css/pianoGames.css
+++ b/LearnPiano/LearnPiano/src/css/pianoGames.css
@@ -17,3 +17,15 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+.loader {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    color: white;
+    background: #4649b0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
